<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".Dashboard">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_ready"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/warning_real_payment_limit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnScanCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_scan_card" />

        <Space
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/btnDefaultWallet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_default_wallet" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_scanned_card_data"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvScannedCardData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#11000000"
        android:padding="8dp"
        android:text="@string/placeholder_no_scan"
        android:textIsSelectable="true" />

    <EditText
        android:id="@+id/etCardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_card_name"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etSwipeData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_swipe_data"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaveCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save_card" />

        <Space
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/btnUseSelectedCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_use_selected_card" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDeleteSelectedCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_delete_selected_card" />

        <Space
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/btnClearAllCards"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_clear_all_cards" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_stored_cards"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listStoredCards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_selected_card_data"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSelectedCardDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#11000000"
        android:padding="8dp"
        android:text="@string/placeholder_no_selected_card"
        android:textIsSelectable="true" />

</LinearLayout>
